--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -85,7 +88,7 @@
             </div>
         </div>
     </div>
-    <main>
+    <main class="content">
         <div class="projects">
             <h3>Your Projects</h3>
             <div class="cards">
