--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
         <div class="topNav">
             <div class="search">
                 <div class="menu-item">
-                    <img src="/icons/magnify.svg" alt="search icon">
-                    <input type="text" name="search" autocomplete="off">
+                    <img src="/icons/magnify.svg" alt="search icon" height="35px">
                 </div>
+                <input type="text" name="search" autocomplete="off">
             </div>
             <div class="account">
                 <div class="menu-item">
-                    <img src="/icons/bell-ring.svg" alt="alert icon">
-                    <div class="github-image">
-                        <img src="https://github.com/mjholmstr.png" alt="github profile image">
-                         <p class="name">Matt Holmstrom</p>
-                    </div>
+                    <img src="/icons/bell-ring.svg" type="image/svg+xml" alt="alert icon" height="35px">
                 </div>
+                <div class="github-image">
+                </div>
+                <p class="name">mjholmstr</p>
+                    
             </div>
         </div>
         <div class="bottomNav">
             <div class="profile">
-                <div class="github-image">
-                    <div class="profile-name">
-                        <p class="greeting">Hi there, </p>
-                        <p class="name">Matt </p><span class="username">@mjholmstr</span>
-                    </div>
+                <div class="github-image"></div>
+                <div class="profile-name">
+                    <p class="greeting">Hi there, </p>
+                    <p class="name">Matt </p><span class="username">@mjholmstr</span>
                 </div>
+                
             </div>
             <div class="nav-buttons">
                 <button class="btn">New</button>
